Fixed visibility of different filters on the main page

--- a/Prod.Web/src/style/styleinfo.less
+++ b/Prod.Web/src/style/styleinfo.less
@@ -1214,6 +1214,10 @@ table.table-hover,
   padding-inline-start: 10px;
 }
 
+.filters p ul {
+  padding-inline-start: 20px;
+}
+
 .nav_menu .filters li.checkbox {
   text-align: left;
 }
